--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Document</title>
 </head>
 <script src="./ObjectOrient/constructor.js"></script>
+<script src="./Variable/DetectType.js"></script>
+<script src="./Variable/ExcuteContext.js"></script>
+<script src="Variable/Scope.js"></script>
+<script src="./ObjectOrient/prototype.js"></script>
 
 <body>
 
