--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <script src="./Variable/ExcuteContext.js"></script>
 <script src="Variable/Scope.js"></script>
 <script src="./ObjectOrient/prototype.js"></script>
+<script src="./ObjectOrient/inherit.js"></script>
+<script src="./FuncExpress/AnomyFunc.js"></script>
 
 <body>
 
